--- a/index.html
+++ b/index.html
@@ -37,12 +37,15 @@
             <div class="container">
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
-                    <h1>I`m Daria Popova <br> a Content Writer</h1>
+                    <h1 class="home-title">I`m Daria Popova <br>a <span id="element">  Content Writer</span></h1>
+                    <p>A personal portfolio is a collection of your work, achievements, and that highlights your abilities and professional growth</p>
+                    <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
                 </div>
             </div>
         </section>
     </main>
 
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
