--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css" rel="stylesheet" />
     <title>Daria Popova</title>
 </head>
+
 <body>
-    
+
     <header class="header">
         <div class="container">
             <div class="header-wrapper">
@@ -37,9 +38,31 @@
             <div class="container">
                 <div class="home-wrapper">
                     <div class="home-desc">Hello</div>
-                    <h1 class="home-title">I`m Daria Popova <br>a <span id="element">  Content Writer</span></h1>
-                    <p>A personal portfolio is a collection of your work, achievements, and that highlights your abilities and professional growth</p>
+                    <h1 class="home-title">I`m Daria Popova <br>a <span id="element"> Content Writer</span></h1>
+                    <p>A personal portfolio is a collection of your work, achievements, and that highlights your
+                        abilities and professional growth</p>
                     <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                </div>
+            </div>
+        </section>
+        <section class="about" id="about">
+            <div class="container">
+                <div class="about-wrapper">
+                    <div class="about-left">
+                        <div class="card-static">
+                            <div class="card-static-body">
+                                <div class="card-static-box">
+                                    <p>10+ <br> Years of Experience</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-neon">
+                            <div class="">UI/UX Design</div>
+                        </div>
+                    </div>
+                    <div class="about-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sint
+                        perferendis,
+                        molestiae nesciunt nihil beatae corporis sit quod in maiores.</div>
                 </div>
             </div>
         </section>
@@ -48,4 +71,5 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
+
 </html>
