--- a/index.html
+++ b/index.html
@@ -52,12 +52,22 @@
                         <div class="card-static">
                             <div class="card-static-body">
                                 <div class="card-static-box">
-                                    <p>10+ <br> Years of Experience</p>
+                                    <p>10+ <br> Years of <br> Experience</p>
                                 </div>
                             </div>
                         </div>
                         <div class="card-neon">
-                            <div class="">UI/UX Design</div>
+                            <div class="card-neon-body">
+                                <div class="card-neon-box">
+                                    <div class="about-box">
+                                        <img src="images/about-icon-locker.svg" alt="" class="icon-img">
+                                    </div>
+                                    <div class="card-neon-box-content">
+                                        <p class="about-title">UI/UX Design</p>
+                                        <p>241 Projects</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="about-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sint
