--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="card-neon">
                             <div class="card-neon-body">
-                                <div class="card-neon-box">
+                                <div class="card-neon-box card-item1">
                                     <div class="about-box">
                                         <img src="images/about-icon-locker.svg" alt="" class="icon-img">
                                     </div>
@@ -70,9 +70,43 @@
                             </div>
                         </div>
                     </div>
-                    <div class="about-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus sint
-                        perferendis,
-                        molestiae nesciunt nihil beatae corporis sit quod in maiores.</div>
+                    <div class="about-right">
+                        <p class="section-desc">About me</p>
+                        <h3 class="section-title">Boost Business Strategic Solutions with us</h3>
+                        <p class="section-text">Business consulting consultans expert advice and guida business to help
+                            them improve their perfomance, efficiency, and organizational </p>
+                        <p class="section-text">Professional business advisors offer strategic guidance and support
+                            companies to boost their productivity, effectiveness, and overall organizational success</p>
+                        <div class="about-right-wrapper">
+                            <div class="card-neon">
+                                <div class="card-neon-body">
+                                    <div class="card-neon-box card-item2">
+                                        <div class="card-right-box-wrapper">
+                                            <div class="icon-right-icon">
+                                                <img src="/images/about-icon-1.svg" alt="">
+                                            </div>
+                                            <div class="about-title">Business</div>
+                                        </div>
+                                        <div class="">Each one showcases my approach</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-neon">
+                                <div class="card-neon-body">
+                                    <div class="card-neon-box card-item2">
+                                        <div class="card-right-box-wrapper">
+                                            <div class="icon-right-icon">
+                                                <img src="/images/about-icon-1.svg" alt="">
+                                            </div>
+                                            <div class="about-title">Business</div>
+                                        </div>
+                                        <div class="">Each one showcases my approach</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="btn">Read more</button>
+                    </div>
                 </div>
             </div>
         </section>
