--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <div class="line-wrapper">
+        <div class="line">1</div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+
     <header class="header">
         <div class="container">
             <div class="header-wrapper">
@@ -96,16 +102,62 @@
                                     <div class="card-neon-box card-item2">
                                         <div class="card-right-box-wrapper">
                                             <div class="icon-right-icon">
-                                                <img src="/images/about-icon-1.svg" alt="">
+                                                <img src="/images/about-icon-2.svg" alt="">
                                             </div>
-                                            <div class="about-title">Business</div>
+                                            <div class="about-title">Partners</div>
                                         </div>
-                                        <div class="">Each one showcases my approach</div>
+                                        <div class="">Business consulting consul us to a provide</div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <button class="btn">Read more</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="service" id="service">
+            <div class="container">
+                <div class="service-box">
+                    <div class="section-desc">Latest Service</div>
+                    <h3 class="section-title">Inspiring the world one Project</h3>
+                    <p class="section-text">Business consulting consultants provide expert advice and guida business to help them improve their performance, efficiency, and organizational</p>
+                </div>
+                <div class="service-wrapper">
+                    <div class="service-left">
+                        <div class="card-neon">
+                            <div class="card-neon-body">
+                                <div class="card-neon-box card-item3">
+                                    <span>01. A porfolio of creativity</span>
+                                    <p class="section-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quisquam dolor suscipit unde dolorum beatae vel commodi ullam nostrum molestiae.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-neon">
+                            <div class="card-neon-body">
+                                <div class="card-neon-box card-item3">
+                                    <span>02. My portfolio of innovation</span>
+                                    <p class="section-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quisquam dolor suscipit unde dolorum beatae vel commodi ullam nostrum molestiae.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-neon">
+                            <div class="card-neon-body">
+                                <div class="card-neon-box card-item3">
+                                    <span>03. A showcase of my projects</span>
+                                    <p class="section-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam quisquam dolor suscipit unde dolorum beatae vel commodi ullam nostrum molestiae.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-right">
+                        <div class="card-neon">
+                            <div class="card-neon-body">
+                                <div class="card-neon-box card-item3">
+                                  <img src="/images/services.webp" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
