--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio hidden">
             <div class="container">
                 <div class="portfolio-box">
                     <div class="section-desc">Latest Portfolio</div>
@@ -261,6 +261,55 @@
                                     <li>Ai</li>
                                 </ul>
                                 <a href="#" class="btn">View portfolio <i class="ri-arrow-right-line"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="education">
+            <div class="container">
+                <div class="education-box">
+                    <div class="section-desc">My education</div>
+                    <h3 class="section-title">Empowering creativity through</h3>
+                    <p class="section-text">Business consulting consultants provide expert advice and guida business
+                        to
+                        help them improve their performance, efficiency, and organizational</p>
+                </div>
+                <div class="education-wrapper">
+                    <div class="card-neon card-tab" data-tab="ai">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="education-card-title">Trainer  Marketing</div>
+                                <div class="education-card-year">2005-2009</div>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon card-tab" data-tab="ai">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="education-card-title">Assistant Director</div>
+                                <div class="education-card-year">2010-2014</div>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon card-tab" data-tab="ai">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="education-card-title">Design Assistant</div>
+                                <div class="education-card-year">2014-2016</div>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon card-tab" data-tab="ai">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="education-card-title">IT Director</div>
+                                <div class="education-card-year">2017-2024</div>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
                             </div>
                         </div>
                     </div>
