--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     </header>
 
     <main>
+
+        <!-- home section -->
         <section class="home hidden">
             <div class="container">
                 <div class="home-wrapper">
@@ -51,6 +53,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- about section -->
         <section class="about hidden" id="about">
             <div class="container">
                 <div class="about-wrapper">
@@ -116,6 +120,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- service section -->
         <section class="service hidden" id="service">
             <div class="container">
                 <div class="service-box">
@@ -169,7 +175,9 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio hidden">
+
+        <!-- portfolio section -->
+        <section class="portfolio hidden" id="portfolio">
             <div class="container">
                 <div class="portfolio-box">
                     <div class="section-desc">Latest Portfolio</div>
@@ -267,52 +275,84 @@
                 </div>
             </div>
         </section>
-        <section class="education">
+
+        <!-- education section -->
+        <section class="education hidden" id="education">
             <div class="container">
                 <div class="education-box">
                     <div class="section-desc">My education</div>
                     <h3 class="section-title">Empowering creativity through</h3>
-                    <p class="section-text">Business consulting consultants provide expert advice and guida business
-                        to
-                        help them improve their performance, efficiency, and organizational</p>
+                    <p class="section-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam pariatur
+                        laborum numquam illum iusto atque, temporibus earum maiores optio repellendus.</p>
                 </div>
                 <div class="education-wrapper">
-                    <div class="card-neon card-tab" data-tab="ai">
+                    <div class="card-neon">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
-                                <div class="education-card-title">Trainer  Marketing</div>
+                                <div class="education-card-title">Trainer Marketing</div>
                                 <div class="education-card-year">2005-2009</div>
-                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    A neque aut provident numquam cum exercitationem eos assumenda vitae culpa quod
+                                    dolor dicta magnam odit repudiandae modi temporibus praesentium quibusdam
+                                    dignissimos, beatae ad illo omnis nostrum. Beatae modi iure explicabo maxime?</p>
                             </div>
                         </div>
                     </div>
-                    <div class="card-neon card-tab" data-tab="ai">
+                    <div class="card-neon">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
                                 <div class="education-card-title">Assistant Director</div>
                                 <div class="education-card-year">2010-2014</div>
-                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    A neque aut provident numquam cum exercitationem eos assumenda vitae culpa quod
+                                    dolor dicta magnam odit repudiandae modi temporibus praesentium quibusdam
+                                    dignissimos, beatae ad illo omnis nostrum. Beatae modi iure explicabo maxime?</p>
                             </div>
                         </div>
                     </div>
-                    <div class="card-neon card-tab" data-tab="ai">
+                    <div class="card-neon">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
                                 <div class="education-card-title">Design Assistant</div>
                                 <div class="education-card-year">2014-2016</div>
-                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    A neque aut provident numquam cum exercitationem eos assumenda vitae culpa quod
+                                    dolor dicta magnam odit repudiandae modi temporibus praesentium quibusdam
+                                    dignissimos, beatae ad illo omnis nostrum. Beatae modi iure explicabo maxime?</p>
                             </div>
                         </div>
                     </div>
-                    <div class="card-neon card-tab" data-tab="ai">
+                    <div class="card-neon">
                         <div class="card-neon-body">
                             <div class="card-neon-box card-item1">
                                 <div class="education-card-title">IT Director</div>
                                 <div class="education-card-year">2017-2024</div>
-                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum eligendi pariatur iste a magni modi atque velit maiores unde.</p>
+                                <p class="education-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    A neque aut provident numquam cum exercitationem eos assumenda vitae culpa quod
+                                    dolor dicta magnam odit repudiandae modi temporibus praesentium quibusdam
+                                    dignissimos, beatae ad illo omnis nostrum. Beatae modi iure explicabo maxime?</p>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- price section -->
+        <section class="price" id="price">
+            <div class="container">
+                <div class="price-box">
+                    <div class="section-desc">My price plan</div>
+                    <h3 class="section-title">Enhancing collaboration between remote</h3>
+                    <p class="section-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam pariatur
+                        laborum numquam illum iusto atque, temporibus earum maiores optio repellendus.</p>
+                </div>
+                <ul class="price-tabs">
+                    <li class="price-tab active" data-tab="year">Year</li>
+                    <li class="price-tab" data-tab="month">Month</li>
+                </ul>
+                <div class="price-card-wrapper">
+                    
                 </div>
             </div>
         </section>
