--- a/index.html
+++ b/index.html
@@ -348,12 +348,114 @@
                         laborum numquam illum iusto atque, temporibus earum maiores optio repellendus.</p>
                 </div>
                 <ul class="price-tabs">
-                    <li class="price-tab active" data-tab="year">Year</li>
-                    <li class="price-tab" data-tab="month">Month</li>
+                    <li class="price-tab active" data-tab="monthly">Monthly</li>
+                    <li class="price-tab" data-tab="yearly">Yearly</li>
                 </ul>
-                <div class="price-card-wrapper">
-                    
+
+                <!-- Monthly -->
+
+                <div class="price-monthly" id="monthly">
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="price-title">Starter</div>
+                                <div class="price-count">$5.00</div>
+                                <div class="price-month">Per month</div>
+                                <ul class="price-list-items">
+                                    <li><i class="ri-checkbox-circle-line"></i> 5 Social media account</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
+                                </ul>
+                                <button class="btn">Get started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="price-title">Pro</div>
+                                <div class="price-count">$230.00</div>
+                                <div class="price-month">Per month</div>
+                                <ul class="price-list-items">
+                                    <li><i class="ri-checkbox-circle-line"></i> 15 Social media account</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Marketing platform</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Life time support</li>
+                                </ul>
+                                <button class="btn">Get started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="price-title">Medium</div>
+                                <div class="price-count">$48.00</div>
+                                <div class="price-month">Per month</div>
+                                <ul class="price-list-items">
+                                    <li><i class="ri-checkbox-circle-line"></i> 8 Social media account</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
+                                </ul>
+                                <button class="btn">Get started</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- Yearly -->
+
+                <div class="price-monthly hidden" id="yearly">
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="price-title">Starter</div>
+                                <div class="price-count">$3.00</div>
+                                <div class="price-month">Per month</div>
+                                <ul class="price-list-items">
+                                    <li><i class="ri-checkbox-circle-line"></i> 5 Social media account</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
+                                </ul>
+                                <button class="btn">Get started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="price-title">Pro</div>
+                                <div class="price-count">$200.00</div>
+                                <div class="price-month">Per month</div>
+                                <ul class="price-list-items">
+                                    <li><i class="ri-checkbox-circle-line"></i> 15 Social media account</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Marketing platform</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Life time support</li>
+                                </ul>
+                                <button class="btn">Get started</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-neon">
+                        <div class="card-neon-body">
+                            <div class="card-neon-box card-item1">
+                                <div class="price-title">Medium</div>
+                                <div class="price-count">$40.00</div>
+                                <div class="price-month">Per month</div>
+                                <ul class="price-list-items">
+                                    <li><i class="ri-checkbox-circle-line"></i> 8 Social media account</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> Free platform access</li>
+                                    <li><i class="ri-checkbox-circle-line"></i> 24/7 customer support</li>
+                                </ul>
+                                <button class="btn">Get started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
